assets/style.css
@font-face {
    font-family: mazzardBold;
    src: url('./Mazzard/MazzardH-Bold.otf');
}

@font-face {
    font-family: mazzardExtraBold;
    src: url('./Mazzard/MazzardH-ExtraBold.otf');
}

@font-face {
    font-family: mazzardExtraLight;
    src: url('./Mazzard/MazzardH-ExtraLight.otf');
}

html {
    /* background: url('./images/Escalator.png') no-repeat center center fixed;
    background-size: cover;
    height: 100%;
    overflow: hidden; */
}

body {
    background: url('./images/Escalator.png') no-repeat center center fixed;
    background-size: cover;
    /* height: 100%; */
    overflow: hidden;
}


#logo {
    box-sizing: border-box;
    width: 185px;
}

#coming-soon {
    color: white;
    font-family: mazzardExtraBold;
    font-size: 120px;
}

.button {
    border: 1px solid white;
    /* padding: 15px 30px 15px 30px; */
    overflow: hidden;
    -webkit-border-radius: 20px; 
    -moz-border-radius: 20px; 
    border-radius: 30px; 
    color: white;
    font-family: mazzardExtraLight;
    font-size: 16px;
}

.button:hover {
    text-decoration: none;
    background-color: white;
    color: #333333;
}

.contact span {
    color: white;
    font-size: 16px;
    font-family: mazzardExtraLight;
}

.sm-icons {
    width: 20px;
}

.sm-icons-fb {
    width: 10px;
}


/* Small devices (phones, 480px and down) */
@media screen and (max-width: 480px) {
    #logo {
        width: 100px;
    }

    #coming-soon {
        font-size: 50px;
        display: block;
    }

    .button {
        font-size: 14px;
    }

    .contact span {
        font-size: 14px;
    }

}

/* Medium devices (tablets, 768px and down) */
@media (max-width: 768px) and (min-width: 480px) { 
    #coming-soon {
        font-size: 100px;
        display: block;
    }
 }

 /* Large devices (desktops, 992px and down) */
@media (min-width: 992px) { 
}

/* Extra large devices (large desktops, 1200px and down)  */
@media (min-width: 1200px) { 

}

